Tidying up a bit

--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,4 @@
-#Mon Aug 15 13:43:08 BST 2011
+#Thu Mar 08 15:26:17 GMT 2012
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
 launchConfigExternalUrlPrefix=
