--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.calclab</groupId>
 	<artifactId>hablar</artifactId>
 	<packaging>war</packaging>
-	<version>0.7-ashward-SNAPSHOT</version>
+	<version>surevine-56</version>
 	<name>Hablar</name>
 
 	<properties>
