Updating emite version in the pom

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- TODO: Fix tests! -->
 		<maven.test.skip>true</maven.test.skip>
+		<emite.version>${project.version}</emite.version>
 	</properties>
 
 	<dependencies>
@@ -44,14 +45,14 @@
 		<dependency>
 			<groupId>com.calclab</groupId>
 			<artifactId>emite</artifactId>
-			<version>0.7-ashward-SNAPSHOT</version>
+			<version>${emite.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.calclab</groupId>
 			<artifactId>emite</artifactId>
 			<classifier>tests</classifier>
-			<version>0.7-ashward-SNAPSHOT</version>
+			<version>${emite.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
